# goit-pyweb-hw-11-API

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 524c86f1d584_add_users_table_and_link_contacts_to_.py  b0f14953ec69_initial_database_schema.py  e7a8f491459a_add_avatar_email_verified_to_user_model.py
app/: dependencies.py
app/conf/: config.py
app/database/: db.py
app/models/: contacts.py  users.py
app/repository/: contacts.py  users.py
app/routes/: auth.py  contacts.py  users.py
app/schemas/: contacts.py  users.py
app/services/: auth.py  email.py
templates/: email_verification_template.html
